            - You could merge system folders & so, remove them.
        * Emails :
            - There were some issues when the default owner of synchronised emails is a team.
            - A crash when accepting a synchronized email with attachments has been fixed.
        * Reports :
            - An issue with the date range visibility in the export filter popup of a report has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The class 'creme_core.creme_jobs.base.JobType' get a new attribute: configurable.
          If you set it to 'False', the related job cannot be edited & the value of "enabled" cannot be changed.
        # Javascript:
            * FormDialog:
                - Form submit error responses with HTML can either replace the default overlay content or the frame content.
                - New creme.dialog.Frame option 'fillOnError'; if enabled the html error response replaces the content.
                - New creme.dialog.Dialog option 'fillFrameOnError'; if enabled the html error response replaces the content.


== Version 2.6.1 ==

  Users side :
  ------------
    # The confirmation message for definitive deletion in hat-bar brick has been fixed.
    # Apps :
        * Billing :
            - A packaging issue with the optional exporter "WeasyPrint" has been fixed.
            - The layout of the TemplateBase detail-views has been fixed.
            - The inner-edition of TemplateBase instances bas been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # A crash when a function is used for default value of an enumerable FK has been fixed.
        # The confirmation message for the brick action 'delete' can now be customised.


== Version 2.6 ==

  UPGRADE NOTES :
    - You should create a all new virtual environment based on Python 3.8+ (as usual).