@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2023  Hybird
+#    Copyright (C) 2009-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -30,7 +30,7 @@ from django.contrib.contenttypes.models import ContentType
 from django.core.exceptions import ValidationError
 from django.core.files.base import ContentFile
 from django.db.transaction import atomic
-from django.forms import (
+from django.forms import (  # URLField
     BooleanField,
     CharField,
     EmailField,
@@ -38,7 +38,6 @@ from django.forms import (
     HiddenInput,
     IntegerField,
     ModelChoiceField,
-    URLField,
 )
 from django.utils.functional import partition
 from django.utils.translation import gettext
@@ -111,6 +110,7 @@ class VcfForm(CremeForm):
 _get_ct = ContentType.objects.get_for_model
 
 
+# TODO: compose from ModelForms in order to get correct constraints like max length?
 class VcfImportForm(CremeModelForm):
     class Meta(CremeModelForm.Meta):
         model = Contact
@@ -176,7 +176,8 @@ class VcfImportForm(CremeModelForm):
     work_phone    = CharField(label=_('Phone'),          required=False)
     work_fax      = CharField(label=_('Fax'),            required=False)
     work_email    = EmailField(label=_('Email address'), required=False)
-    work_url_site = URLField(label=_('Web Site'),        required=False)
+    # work_url_site = URLField(label=_('Web Site'),        required=False)
+    work_url_site = CharField(label=_('Web Site'),       required=False)
 
     # Organisation address
     workaddr_name    = CharField(label=_('Name'),     required=False)
