@@ -15,6 +15,8 @@
             - A crash when accepting a synchronized email with attachments has been fixed.
         * Reports :
             - An issue with the date range visibility in the export filter popup of a report has been fixed.
+        * VCFs :
+            - In VCF import, the URL validation for the Organisation's site has been removed.
 
   Developers side :
   -----------------
